@@ -2,6 +2,7 @@ Additions:
 Added the ability to use a thousands separator for more readable currency amounts.
 Added support for decimal amounts.
 Allowed using flat and percentage PVP rewards at the same time
+Added Thut Essentials support
 
 Changes:
 Config is better organized. Delete your old config.
